[tool.poetry]
name = "course-work-4"
version = "0.1.0"
description = ""
authors = ["Belish88 <belish888@rambler.ru>"]
readme = "README.md"
packages = [{include = "course_work_4"}]

[tool.poetry.dependencies]
python = "^3.10"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
